[WTF] Debug build fails due conflicting abort() method https://bugs.webkit.org/show_bug.cgi?id=192491

Reviewed by Michael Catanzaro.

* wtf/Assertions.h: Use namespaced std::abort() insted of plain abort() to avoid clashes
inside classes which have an ::abort() method, but only when __cplusplus is defined to
allow inclusion of the header in plain C sources.


Canonical link: https://commits.webkit.org/207107@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239012 268f45cc-cd09-0410-ab3c-d52691b4dbfc